<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="country"
            type="com.pedrorocha.covid19info.data.local.CountryEntity">
        </variable>
        <variable
            name="countryCovidInfo"
            type="com.pedrorocha.covid19info.data.local.CovidInfoEntity">
        </variable>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:orientation="vertical"
        tools:context=".ui.country.CountryFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/favorite_icon_content_description"
                android:src="@{country.favorite ? @drawable/ic_favorite : @drawable/ic_favorite_empty}"
                android:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_marginLeft="@dimen/space_medium"
                android:text="@{country.name}"
                android:textColor="@color/colorPrimaryText"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loader_covid_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/country_cases"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_last_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{countryCovidInfo == null ? @string/no_data : countryCovidInfo.lastUpdatedFormatted}"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/country_cases_confirmed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginLeft="@dimen/space_small"
                android:text="@{String.valueOf(countryCovidInfo.confirmed)}"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/country_cases_recovered" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginLeft="@dimen/space_small"
                android:text="@{String.valueOf(countryCovidInfo.recovered)}"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/country_cases_deaths" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginLeft="@dimen/space_small"
                android:text="@{String.valueOf(countryCovidInfo.deaths)}"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_last_downloaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_updated_placeholder"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_large"
            android:gravity="center"
            android:textSize="14sp" />

    </LinearLayout>
</layout>